--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "mongoose": "^6.0.11",
     "pg": "^8.7.1",
     "pg-promise": "^10.11.1"
+  },
+  "devDependencies": {
+    "jest": "^27.3.1"
   }
 }
