--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg-promise": "^10.11.1"
   },
   "devDependencies": {
-    "jest": "^27.3.1"
+    "jest": "^27.3.1",
+    "request": "^2.88.2"
   }
 }
