--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.11",
     "pg": "^8.7.1",
-    "pg-promise": "^10.11.1"
+    "pg-promise": "^10.11.1",
+    "redis": "^3.1.2"
   },
   "devDependencies": {
     "jest": "^27.3.1",
